RESOLVED FIXED259622
Safari crashes when showing the downloads menu for a download with no MIME type
https://bugs.webkit.org/show_bug.cgi?id=259622
Summary Safari crashes when showing the downloads menu for a download with no MIME type
Tim Horton
Reported 2023-07-28 19:02:13 PDT
Safari crashes when showing the downloads menu for a download with no MIME type
Attachments
Tim Horton
Comment 1 2023-07-28 19:02:15 PDT
Tim Horton
Comment 2 2023-07-28 19:07:44 PDT
EWS
Comment 3 2023-07-29 00:45:36 PDT
Committed 266414@main (d94ee98c7619): <https://commits.webkit.org/266414@main> Reviewed commits have been landed. Closing PR #16208 and removing active labels.
Chris Dumez
Comment 4 2023-08-11 14:53:24 PDT
*** Bug 260098 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.