Cherry-pick d94ee98c7619. rdar://problem/113602762

Safari crashes when showing the downloads menu for a download with no MIME type
    https://bugs.webkit.org/show_bug.cgi?id=259622
    rdar://113058721

    Reviewed by Wenson Hsieh.

    * Source/WebCore/loader/mac/LoaderNSURLExtras.mm:
    Add a null check.

    * Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/URLExtras.mm: Renamed from Tools/TestWebKitAPI/Tests/WebKitLegacy/mac/URLCanonicalization.mm.
    (TestWebKitAPI::TEST):
    * Tools/TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
    Rename URLCanonicalization to URLExtras and add a (very simple) positive and
    negative test for _webkit_suggestedFilenameWithMIMEType, which was what
    was triggering this crash.

    Canonical link: https://commits.webkit.org/266414@main

Canonical link: https://commits.webkit.org/265870.254@safari-7616-branch